--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -12,7 +12,7 @@
         margin-left: .4em;
         margin-top: -0.15em;
         vertical-align: middle;
-        @include make-arrow(inherit, down, 0.3em, 0.3em);
+        @include make-arrow(null, down, 0.3em, 0.3em);
     }
     .menu {
         display: none;
@@ -79,7 +79,7 @@
         max-height: 275px;
         overflow-y: auto;
         margin: 0;
-        border: 1px solid $color-primary;
+        border: 1px solid $input-border-focus;
         border-top-width: 0;
         border-radius: 0 0 $input-border-radius $input-border-radius;
     }
@@ -88,7 +88,7 @@
         color: $input-placeholder;
     }
     &:focus {
-        border-color: $color-primary;
+        border-color: $input-border-focus;
     }
     &:after {
         position: absolute;
