--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -62,7 +62,7 @@
         border-left: $size solid transparent;
         border-right: $size solid transparent;
         border-bottom: $tip-size solid;
-        border-bottom-color: $color; // inherit doesn't work for shorthands
+        border-bottom-color: $color; // allow passing null without removing the tip
     } @else if $direction == down {
         border-left: $size solid transparent;
         border-right: $size solid transparent;
