--- a/src/scss/utils/_helpers.scss
+++ b/src/scss/utils/_helpers.scss
@@ -53,14 +53,15 @@
     @include breakpoint-up($size) {
 
         @each $dir, $abbr in (top: t, right: r, bottom: b, left: l) {
-            @for $i from 1 through 5 {
+            @for $i from 1 through 4 {
                 $name: if($size == xs, #{$abbr}-#{$i}, #{$abbr}-#{$size}-#{$i}); // xs shorthand
+                $value: if($i == 4, ($i*1.5) * 0.5rem, $i * 0.5rem); // double the space on 4
 
                 .m#{$name} { // margin
-                    margin-#{$dir}: $i * 0.5rem;
+                    margin-#{$dir}: $value;
                 }
                 .p#{$name} { // padding
-                    padding-#{$dir}: $i * 0.5rem;
+                    padding-#{$dir}: $value;
                 }
             }
         }
