Add .bg-inverse class

--- a/src/scss/utils/_helpers.scss
+++ b/src/scss/utils/_helpers.scss
@@ -24,6 +24,7 @@
 .bg-positive { background-color: $color-positive; color: #FFF; }
 .bg-warning  { background-color: $color-warning; color: #FFF; }
 .bg-negative { background-color: $color-negative; color: #FFF; }
+.bg-inverse  { background-color: $color-inverse; color: #FFF; }
 
 // Images
 .img-responsive { // TODO: reconsider
