--- a/src/scss/build.scss
+++ b/src/scss/build.scss
@@ -25,6 +25,7 @@
 @import "components/grid";
 @import "components/input";
 @import "components/label";
+@import "components/list";
 @import "components/menu";
 @import "components/message";
 @import "components/popup";
