--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -30,7 +30,6 @@
 }
 
 // Directions
-// TODO: check out margins and theme variables
 .popup--north {
     &:before {
         top: 100%;
@@ -62,13 +61,13 @@
     &:before {
         top: 50%;
         right: 100%;
-        margin-top: -7px;
+        margin-top: -#{$popup-arrow-size + 1px};
         @include make-arrow($popup-border-color, 'left', #{$popup-arrow-size + 1px}, #{$popup-arrow-size + 1px}, false);
     }
     &:after {
         top: 50%;
         right: 100%;
-        margin-top: -6px;
+        margin-top: -$popup-arrow-size;
         @include make-arrow($popup-background, 'left', $popup-arrow-size, $popup-arrow-size, false);
     }
 }
@@ -89,13 +88,13 @@
     &:before {
         bottom: 100%;
         left: 50%;
-        margin-left: -7px;
+        margin-left: -#{$popup-arrow-size + 1px};
         @include make-arrow($popup-border-color, 'up', #{$popup-arrow-size + 1px}, #{$popup-arrow-size + 1px}, false);
     }
     &:after {
         bottom: 100%;
         left: 50%;
-        margin-left: -6px;
+        margin-left: -$popup-arrow-size;
         @include make-arrow($popup-background, 'up', $popup-arrow-size, $popup-arrow-size, false);
     }
 }
@@ -116,13 +115,13 @@
     &:before {
         top: 50%;
         left: 100%;
-        margin-top: -7px;
+        margin-top: -#{$popup-arrow-size + 1px};
         @include make-arrow($popup-border-color, 'right', #{$popup-arrow-size + 1px}, #{$popup-arrow-size + 1px}, false);
     }
     &:after {
         top: 50%;
         left: 100%;
-        margin-top: -6px;
+        margin-top: -$popup-arrow-size;
         @include make-arrow($popup-background, 'right', $popup-arrow-size, $popup-arrow-size, false);
     }
 }
