--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -22,6 +22,13 @@
         @content;
     }
 }
+@mixin breakpoint-only($size) {
+    @include breakpoint-up($size) {
+        @include breakpoint-down($size) {
+            @content;
+        }
+    }
+}
 
 // Button
 @mixin make-button($color, $background-color, $border-color: null, $increments: 5%, $hollow: false) {
