Add visibility helpers
Classes to hide elements on certain screen sizes

--- a/src/scss/utils/_helpers.scss
+++ b/src/scss/utils/_helpers.scss
@@ -63,6 +63,22 @@
     }
 }
 
+// Visibility
+@each $size, $breakpoint in $grid-breakpoints {
+    @if $breakpoint > 0 {
+        @include breakpoint-down($size) {
+            .hide-#{$size}-down {
+                display: none;
+            }
+        }
+        @include breakpoint-up($size) {
+            .hide-#{$size}-up {
+                display: none;
+            }
+        }
+    }
+}
+
 // Clearfix
 .clear:after {
     content: " ";
