--- a/src/scss/components/_dialog.scss
+++ b/src/scss/components/_dialog.scss
@@ -26,6 +26,10 @@
     width: $dialog-block-width;
     max-width: 100%;
     padding: $dialog-block-padding;
+
+    + .dialog__block {
+        border-top: 1px solid $dialog-block-border-color;
+    }
 }
 .dialog__close {
     position: absolute;
