--- a/src/scss/base/_theme.scss
+++ b/src/scss/base/_theme.scss
@@ -86,8 +86,8 @@ $z-dialog:   1000   !default;
 /*---------------------*
  * Input
  *---------------------*/
-$input-padding:       0.625rem, 0.8125rem   !default;
-$input-line-height:   1.125                 !default;
+$input-padding:       0.5625rem, 0.8125rem  !default;
+$input-line-height:   1.25                  !default;
 $input-color:         $color-base           !default;
 $input-placeholder:   #999                  !default;
 $input-background:    #fff                  !default;
@@ -120,8 +120,8 @@ $label-border-radius: $border-radius-base   !default;
 /*---------------------*
  * List
  *---------------------*/
-$list-line-height:    1.25                  !default;
-$list-spacing:        0.75rem               !default;
+$list-line-height: 1.25     !default;
+$list-spacing:     0.75rem  !default;
 
 // Item
 $list-item-padding:      0.75rem 1rem          !default;
@@ -131,14 +131,16 @@ $list-item-background:   transparent           !default;
 /*---------------------*
  * Button
  *---------------------*/
-$button-padding:       0.625rem, 1.125rem   !default;
-$button-padding-sm:    0.375rem, 0.6875rem  !default;
-$button-padding-lg:    0.8125rem, 1.5rem    !default;
-$button-line-height:   1.125                !default;
+$button-padding:       0.5625rem, 1.125rem  !default;
+$button-line-height:   1.25                 !default;
 $button-font-weight:   normal               !default;
 $button-color:         $color-base          !default;
 $button-background:    $color-gray-lightest !default;
 $button-border-radius: $border-radius-base  !default;
+
+// Sizes
+$button-padding-sm: 0.375rem, 0.6875rem !default;
+$button-padding-lg: 0.8125rem, 1.5rem   !default;
 
 /*---------------------*
  * Table
@@ -182,14 +184,17 @@ $dialog-background:    #FFF                 !default;
 $dialog-border-radius: $border-radius-base  !default;
 
 // Block
-$dialog-block-width:        40rem                       !default;
-$dialog-block-width-sm:     ($dialog-block-width * 0.6) !default;
-$dialog-block-width-lg:     ($dialog-block-width * 1.4) !default;
-$dialog-block-padding:      1rem                        !default;
-$dialog-block-border-color: $color-gray-lightest        !default;
+$dialog-block-width:        40rem                   !default;
+$dialog-block-padding:      1rem                    !default;
+$dialog-block-border-color: $color-gray-lightest    !default;
+
+// Sizes
+$dialog-block-width-sm: ($dialog-block-width * 0.6) !default;
+$dialog-block-width-lg: ($dialog-block-width * 1.4) !default;
 
 // Dimmer
-$dialog-dimmer-background: rgba(0,0,0,0.3) !default;
+$dialog-dimmer-background: rgba(0,0,0,0.4) !default;
+
 
 /*---------------------*
  * Form
@@ -208,7 +213,7 @@ $menu-tabs: '';
  * Message
  *---------------------*/
 $msg-margin-bottom: 1rem                    !default;
-$msg-padding:       0.75rem 1rem            !default;
+$msg-padding:       0.625rem 1rem           !default;
 $msg-background:    #FFF                    !default;
 $msg-border-color:  $color-gray-light       !default;
 $msg-border-radius: $border-radius-base     !default;
@@ -227,7 +232,7 @@ $msg-padding-lg: 1rem, 1.25rem      !default;
  * Popup
  *---------------------*/
 $popup-max-width:    18rem                      !default;
-$popup-padding:      0.5rem, 0.75rem            !default;
+$popup-padding:      0.4375rem, 0.75rem         !default;
 $popup-font-size:    0.9375rem                  !default;
 $popup-background:   #FFF                       !default;
 $popup-border-color: $color-gray-light          !default;
