--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -1,16 +1,3 @@
-// Toggles
-//@mixin box-shadow($shadow...) {
-//    @if $enable-shadows {
-//        box-shadow: $shadow;
-//    }
-//}
-//
-@mixin transition($transition) {
-    @if false {
-        transition: $transition;
-    }
-}
-
 // Media queries
 @mixin breakpoint-up($size) {
     @media (min-width: map-get($grid-breakpoints, $size)) {
@@ -48,8 +35,8 @@
         background-color: $background-color and darken($background-color, $increments*2);
     }
 }
-@mixin make-hollow-button($color, $border-color: $color, $background-color: null, $increments: 6%) {
-    @include make-button($color, $background-color, $border-color, $increments, true);
+@mixin make-hollow-button($color, $border-color: $color, $background-color: null) {
+    @include make-button($color, $background-color, $border-color, 7%, true);
 }
 
 // Card
