Transition the dimmer's background color + DRY code
Use class-based transitioning for the dimmer instead of the transition plugin, refactor code (DRY).

--- a/src/scss/components/_dialog.scss
+++ b/src/scss/components/_dialog.scss
@@ -9,7 +9,12 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    background-color: $dialog-dimmer-background;
+    background-color: transparent;
+    transition: background-color 420ms ease;
+
+    &.active {
+        background-color: $dialog-dimmer-background;
+    }
 }
 .dialog {
     display: none;
