--- a/src/scss/base/_theme.scss
+++ b/src/scss/base/_theme.scss
@@ -97,7 +97,7 @@ $input-border-radius: $border-radius-base   !default;
 $input-transition:    $transition-base      !default;
 
 // Sizes
-$input-padding-sm: 0.4375rem, 0.625rem  !default;
+$input-padding-sm: 0.375rem, 0.625rem   !default;
 $input-padding-lg: 0.75rem, 1rem        !default;
 
 // States
@@ -168,6 +168,7 @@ $card-block-border-color: $color-gray-lightest !default;
 /*---------------------*
  * Dropdown
  *---------------------*/
+$dropdown-min-width:     8rem                       !default;
 $dropdown-margin:        0.5rem, -1px               !default;
 $dropdown-background:    #FFF                       !default;
 $dropdown-border-color:  $color-gray-light          !default;
@@ -198,7 +199,6 @@ $dialog-block-width-lg: ($dialog-block-width * 1.4) !default;
 // Dimmer
 $dialog-dimmer-background: rgba(0,0,0,0.4) !default;
 
-
 /*---------------------*
  * Form
  *---------------------*/
@@ -228,7 +228,7 @@ $msg-negative-color: $color-negative    !default;
 $msg-info-color:     $color-info        !default;
 
 // Sizes
-$msg-padding-sm: 0.5rem, 0.75rem    !default;
+$msg-padding-sm: 0.375rem, 0.75rem  !default;
 $msg-padding-lg: 1rem, 1.25rem      !default;
 
 /*---------------------*
