--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -1,6 +1,6 @@
 .table {
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: $table-margin-bottom;
     border-collapse: collapse;
 
     th {
@@ -71,4 +71,9 @@
 // View
 .table-view {
     overflow-x: auto;
+    margin-bottom: $table-margin-bottom;
+
+    .table {
+        margin-bottom: 0;
+    }
 }
