--- a/src/scss/base/_theme.scss
+++ b/src/scss/base/_theme.scss
@@ -87,7 +87,7 @@ $z-dialog:   1000   !default;
 /*---------------------*
  * Input
  *---------------------*/
-$input-padding:       0.5625rem, 0.8125rem  !default;
+$input-padding:       0.5625rem 0.8125rem   !default;
 $input-line-height:   1.25                  !default;
 $input-color:         $color-base           !default;
 $input-placeholder:   #999                  !default;
@@ -97,8 +97,8 @@ $input-border-radius: $border-radius-base   !default;
 $input-transition:    $transition-base      !default;
 
 // Sizes
-$input-padding-sm: 0.375rem, 0.625rem   !default;
-$input-padding-lg: 0.75rem, 1rem        !default;
+$input-padding-sm: 0.375rem 0.625rem   !default;
+$input-padding-lg: 0.75rem 1rem        !default;
 
 // States
 $input-color-hover:      $input-color                       !default;
@@ -112,7 +112,7 @@ $input-background-focus: $input-background  !default;
 /*---------------------*
  * Label
  *---------------------*/
-$label-padding:       0.35em, 0.625em       !default;
+$label-padding:       0.35em 0.625em        !default;
 $label-font-size:     0.875em               !default;
 $label-font-weight:   normal                !default;
 $label-color:         $color-base           !default;
@@ -133,7 +133,7 @@ $list-item-background:   transparent           !default;
 /*---------------------*
  * Button
  *---------------------*/
-$button-padding:       0.5625rem, 1.125rem  !default;
+$button-padding:       0.5625rem 1.125rem   !default;
 $button-line-height:   1.25                 !default;
 $button-font-weight:   normal               !default;
 $button-color:         $color-base          !default;
@@ -142,14 +142,14 @@ $button-border-radius: $border-radius-base  !default;
 $button-transition:    $transition-base     !default;
 
 // Sizes
-$button-padding-sm: 0.375rem, 0.6875rem !default;
-$button-padding-lg: 0.8125rem, 1.5rem   !default;
+$button-padding-sm: 0.375rem 0.6875rem  !default;
+$button-padding-lg: 0.8125rem 1.5rem    !default;
 
 /*---------------------*
  * Table
  *---------------------*/
 $table-margin-bottom: 1rem                  !default;
-$table-col-padding:   0.625rem, 0.625rem    !default;
+$table-col-padding:   0.625rem 0.625rem     !default;
 $table-border-width:  1px                   !default;
 $table-border-style:  solid                 !default;
 $table-border-color:  $color-gray-lightest  !default;
@@ -157,7 +157,7 @@ $table-border-color:  $color-gray-lightest  !default;
 /*---------------------*
  * Card
  *---------------------*/
-$card-padding:       1rem, 1rem                 !default;
+$card-padding:       1rem 1rem                  !default;
 $card-background:    #FFF                       !default;
 $card-border-color:  $color-gray-light          !default;
 $card-border-radius: $border-radius-base        !default;
@@ -170,15 +170,15 @@ $card-block-border-color: $color-gray-lightest !default;
  * Dropdown
  *---------------------*/
 $dropdown-min-width:     8rem                       !default;
-$dropdown-margin:        0.5rem, -1px               !default;
+$dropdown-margin:        0.5rem -1px                !default;
 $dropdown-background:    #FFF                       !default;
 $dropdown-border-color:  $color-gray-light          !default;
 $dropdown-border-radius: $border-radius-base        !default;
 $dropdown-box-shadow:    0 2px 6px rgba(0,0,0,0.1)  !default;
 
 // Item
-$dropdown-item-padding:      0.625rem, 0.8125rem    !default;
-$dropdown-item-border-color: rgba(0,0,0,0.04)       !default;
+$dropdown-item-padding:      0.625rem 0.8125rem !default;
+$dropdown-item-border-color: rgba(0,0,0,0.04)   !default;
 
 /*---------------------*
  * Dialog
@@ -217,7 +217,7 @@ $menu-tabs: '';
  * Message
  *---------------------*/
 $msg-margin-bottom: 1rem                    !default;
-$msg-padding:       0.625rem 1rem           !default;
+$msg-padding:       0.75rem 1rem            !default;
 $msg-background:    #FFF                    !default;
 $msg-border-color:  $color-gray-light       !default;
 $msg-border-radius: $border-radius-base     !default;
@@ -229,14 +229,14 @@ $msg-negative-color: $color-negative    !default;
 $msg-info-color:     $color-info        !default;
 
 // Sizes
-$msg-padding-sm: 0.375rem, 0.75rem  !default;
-$msg-padding-lg: 1rem, 1.25rem      !default;
+$msg-padding-sm: 0.375rem 0.75rem  !default;
+$msg-padding-lg: 1rem 1.25rem      !default;
 
 /*---------------------*
  * Popup
  *---------------------*/
 $popup-max-width:    18rem                      !default;
-$popup-padding:      0.4375rem, 0.75rem         !default;
+$popup-padding:      0.4375rem 0.75rem          !default;
 $popup-font-size:    0.9375rem                  !default;
 $popup-background:   #FFF                       !default;
 $popup-border-color: $color-gray-light          !default;
