--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -8,7 +8,7 @@
     }
     th,
     td {
-        padding: spacing($table-col-padding);
+        padding: $table-col-padding;
         border-bottom: $table-border-width solid $table-border-color;
         vertical-align: top;
     }
